# english_words_memorization

./: CMakeLists.txt  README.md  README_zh.md  main.cpp
command/: command.cpp  command.h
lexer/: Lexer.cpp  Lexer.h
parser/: Parser.cpp  Parser.h
repl/: repl.cpp  repl.h
token/: Token.cpp  Token.h
trie/: file.cpp  file.h  trie.cpp  trie.h
utils/: Encoding.cpp  Encoding.h  Logger.cpp  Logger.h  myDate.cpp  myDate.h
words/: Word.h  memory.cpp  memory.h  word.cpp
